# qcost

./: .gitignore  .qcost.yml  CONTRIBUTING.md  LICENSE  README.md  action.yml  manifest.in  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
action/: action_runner.py
qcost/: __init__.py  analyzer.py  config.py  explainer.py  models.py  reporter.py
qcost/extractors/: __init__.py  source.py
qcost/rules/: __init__.py  ast_rules.py
testdata/: bad_queries.sql
testdata/postgres/: good_queries.sql
tests/: test_rules.py
