[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcost"
version = "0.1.0"
description = "SQL query cost predictor for your PR pipeline"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=23.0",
    "psycopg2-binary>=2.9",
    "PyMySQL>=1.1",
    "pyyaml>=6.0",
    "rich>=13.0",       # terminal output
    "typer>=0.12",      # CLI (thin wrapper, not needed for Action)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
qcost = "qcost.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["qcost*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"